# portaudio-playground

./: CMakeLists.txt  README.md  local-build.cmd  setup.cmd
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: main.c
libaudio/: CMakeLists.txt
libaudio/include/: libaudio.h
libaudio/src/: libaudio.c
src/: main.c
